--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    padding-bottom: 100px;
 
 }
 
@@ -28,10 +29,19 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
 .add-button {
     text-decoration: none;
     padding: 10px 20px;
     background-color: orange;
     color: white;
     border-radius: 5px;
+}
+
+.section-two {
+    background-image: url(images/dream-bg.png);
+    background-position: right;
 }
