--- a/style.css
+++ b/style.css
@@ -45,3 +45,15 @@ h2 {
     background-image: url(images/dream-bg.png);
     background-position: right;
 }
+
+.section-three {
+    display: flex;
+}
+
+.full-stack {
+    width: 40%;
+}
+
+.baby-web {
+    width: 40%;
+}
